action overflow updates for passport issue #1018

--- a/pkg/bb10/bbui.css
+++ b/pkg/bb10/bbui.css
@@ -14,7 +14,7 @@
 * limitations under the License.
 */
 
-/* bbUI for BB10 VERSION: 0.9.6.1797*/
+/* bbUI for BB10 VERSION: 0.9.6.1799*/
 
 body, html {
 	padding:0;
@@ -5230,6 +5230,25 @@ body, html {
 		width: 100px;
 		margin-top: 0px;
 		margin-left:10px;
+	}
+
+	/* Action Overflow */
+	.bb-context-menu-item {	
+		padding-left: 10px;
+		height: 130px;
+		line-height: 122px;
+		font-size:42pt;
+	}
+
+	.bb-context-menu-item-inner {
+		padding-left: 15px;
+	}
+
+	.bb-context-menu-item-image {
+		height: 100px;
+		width: 100px;
+		margin-top:14px;
+		margin-left:12px;
 	}
 
 }
