--- a/src/bb10/css/media.css
+++ b/src/bb10/css/media.css
@@ -1792,6 +1792,25 @@
 		margin-left:10px;
 	}
 
+	/* Action Overflow */
+	.bb-context-menu-item {	
+		padding-left: 10px;
+		height: 130px;
+		line-height: 122px;
+		font-size:42pt;
+	}
+
+	.bb-context-menu-item-inner {
+		padding-left: 15px;
+	}
+
+	.bb-context-menu-item-image {
+		height: 100px;
+		width: 100px;
+		margin-top:14px;
+		margin-left:12px;
+	}
+
 }
 
 @media screen and (width: 1024px) and (height: 600px), (width: 600px) and (height: 1024px){
